--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/vgas?useSSL=false
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = mysql
+spring.datasource.password = 76f4dd9b
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Keep the connection alive if idle for a long time (needed in production)
@@ -32,7 +32,9 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 # Naming strategy
-spring.jpa.hibernate.naming.strategy= = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+spring.profiles = dev
