--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/vgas?useSSL=false
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = volvo123
+spring.datasource.password = mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Keep the connection alive if idle for a long time (needed in production)
