--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
 spring.profiles = dev
 
-server.contextPath=/rl
 #spring.mvc.view.prefix: /WEB-INF/jsp/
 #spring.mvc.view.suffix: .jsp
+
+server.port = 8000
