--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,7 @@ spring.profiles = dev
 #spring.mvc.view.suffix: .jsp
 
 server.port = 8000
+
+
+#don't cache thymeleaf templates for development purpose
+spring.thymeleaf.cache=false
