--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 	<groupId>com.volvo</groupId>
 	<artifactId>WeChatApp</artifactId>
 	<version>0.0.1</version>
+	<packaging>war</packaging>
 	
 
 	<name>WeChatApp</name>
