--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 # Set here configurations for the database connection
 
 # Connection url for the database "vgas"
-spring.datasource.url = jdbc:mysql://localhost:3306/vgas?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/vgas?useSSL=false&serverTimezone=GMT
 
 # Username and password
 spring.datasource.username = developer
